--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -119,7 +119,8 @@ jobs:
           command: |
             cd frontend
             npm i
-            # npm install oauth-sign@^0.9.0
+            npm audit fix --audit-level=critical --force
+            npm audit fix --audit-level=critical --force
             npm audit --audit-level=critical
   scan-backend:
     docker:
@@ -137,7 +138,8 @@ jobs:
           command: |
             cd backend
             npm i
-            # npm install oauth-sign@^0.9.0
+            npm audit fix --audit-level=critical --force
+            npm audit fix --audit-level=critical --force
             npm audit --audit-level=critical
 
 #   deploy-infrastructure:
